<resources>
    <string name="app_name">AndroidSeminar</string>
    <string name="id_label">깃허브 아이디</string>
    <string name="request_id_message">ID를 입력해주세요</string>
    <string name="password_label">비밀번호</string>
    <string name="request_password_message">비밀번호를 입력해주세요</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="has_not_id_pw_text">아이디/비밀번호가 없으신가요?</string>
    <string name="name_label">이름</string>
    <string name="signup_text">SignUp</string>
    <string name="reqeust_input_name">이름을 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>