<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        >

        <TextView
            android:id="@+id/sign_up_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/sign_up_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reqeust_input_name"
            app:layout_constraintTop_toBottomOf="@id/sign_up_name_label"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_github_id_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_name_container"
        >

        <TextView
            android:id="@+id/sign_up_github_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/sign_up_github_password_container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_id_message"
            app:layout_constraintTop_toBottomOf="@id/sign_up_github_id_label"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_github_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_github_id_container"
        >

        <TextView
            android:id="@+id/sign_up_github_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_up_github_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_password_message"
            app:layout_constraintTop_toBottomOf="@id/sign_up_github_password_label"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_github_password_container" />

</androidx.constraintlayout.widget.ConstraintLayout>